# VectorField

./: .gitmodules  LICENSE  README.md  pyproject.toml
src/vectorfield/: __init__.py  core.py  decomposition.py  hnn.py  interpolation.py  koopman.py  plotting.py  transport.py
tests/: test_core.py  test_decomposition.py  test_hnn.py  test_interpolation.py  test_koopman.py  test_plotting.py  test_transport.py
vfield_util/: vfield_hnn.py  vfield_koopman.py  vfield_util.py  vfield_vis.py
